--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_comparison">ComparisonActivity</string>
     <string name="title_add_new_comparison">Add new comparison</string>
-    <string name="title_add_new_option">Add new option</string>vv
+    <string name="title_add_new_option">Add new option</string>
+    <string name="title_edit_comparison">Rename comparison</string>
+    <string name="title_edit_option">Rename option</string>
     <string name="tab_result">Result</string>
     <string name="tap_options">Options</string>
     <string name="tab_compare">Compare</string>
@@ -11,9 +13,8 @@
     <string name="hint_comparison_name">Comparison name</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_ok">OK</string>
-    <string name="error_empty_option_name">Name can\'t be empty</string>
-    <string name="error_empty_comparison_name">Name can\'t be empty</string>
-
+    <string name="error_empty_option_name">Option name can\'t be empty</string>
+    <string name="error_empty_comparison_name">Comparison name can\'t be empty</string>
     <string name="description_click_to_add">Click the + button to add</string>
     <string name="title_no_comparisons">No Comparisons</string>
     <string name="title_no_options">No Options</string>
@@ -22,5 +23,4 @@
     <string name="title_no_results">No results</string>
     <string name="description_no_results">Add some options and compare them first</string>
     <string name="menu_licenses">Licenses</string>
-
 </resources>
