--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="title_licenses">Licenses</string>
     <string name="snackbar_pie_chart_saved">Pie chart image saved to the gallery</string>
     <string name="snackbar_bar_chart_saved">Bar chart image saved to the gallery</string>
+    <string name="snackbar_list_saved">List copied to your clipboard</string>
     <string name="hint_add_option">Add new option…</string>
     <string name="button_add">add</string>
 
