--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Pairwise Comparison</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_comparison">ComparisonActivity</string>
     <string name="title_add_new_comparison">Add new comparison</string>
     <string name="title_add_new_option">Add new option</string>
     <string name="title_edit_comparison">Rename comparison</string>
@@ -23,15 +21,16 @@
     <string name="title_no_results">No results</string>
     <string name="description_no_results">Add some options and compare them first</string>
     <string name="menu_licenses">Licenses</string>
-    <string name="title_licenses">Licenses</string>
     <string name="snackbar_pie_chart_saved">Pie chart image saved to the gallery</string>
     <string name="snackbar_bar_chart_saved">Bar chart image saved to the gallery</string>
     <string name="snackbar_list_saved">List copied to clipboard</string>
     <string name="snackbar_empty_clipboard">Your clipboard is empty</string>
+    <string name="snackbar_nothing_to_compare">Nothing to compare</string>
     <string name="hint_add_option">Add new option…</string>
     <string name="button_add">add</string>
     <string name="button_save">save</string>
     <string name="title_pasted_options">Options from your clipboard:</string>
+    <string name="title_prompt">Which of these two options is more important?</string>
 
     <string-array name="chart_types">
         <item>Pie Chart</item>
